# task

./: CMakeLists.txt
LabTools/: LabTools.cpp  LabTools.h
LabTools/lib/: CMakeLists.txt
Map/: CMakeLists.txt  Graph.cpp  MapOfLocation.cpp  MapOfLocation.h  PriorityQueue.cpp  PriorityQueue.h
Map/Graph/: CMakeLists.txt  Graph.cpp  Graph.h  testGraph.cpp
Map/Graph/lib/: CMakeLists.txt
Map/Graph/test/: CMakeLists.txt
Map/MapOfLocation/: MapOfLocation.cpp  MapOfLocation.h
Map/MapOfLocation/lib/: CMakeLists.txt
Map/MapOfLocation/test/: CMakeLists.txt  testMapOfLocation.cpp
Map/PriorityQueue/: CMakeLists.txt  PriorityQueue.cpp  PriorityQueue.h  testingPriorityQueue.cpp
Map/WayDescription/: WayDescription.cpp  WayDescription.h
Order/: Order.cpp  Order.h
Route/: Route.cpp  Route.h
Truck/: Truck.cpp  Truck.h
src/: logic.cpp  logic.h  main.cpp
src/Dialog/: Dialog.cpp  Dialog.h  addPrintOrders.cpp  calculatePrintRoutes.cpp  menu.cpp
src/logic/: logic.cpp  logic.h
